# gen2-acl-bundle

./: environment.yml  pyproject.toml
.github/workflows/: main.yml
src/gen2aclbundle/: containerInit.py
