[tool.poetry]
name = "gen2-acl-bundle"
version = "0.2.0"
description = "Azure DataLake ACL setup bundle for the Pyfony Framework"
readme = "README.md"
repository = "https://github.com/bricksflow/gen2-acl-bundle"

license = "MIT"

authors = [
    "Jiri Koutny <jiri.koutny@datasentics.com>"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

include = ["*.yaml"]

packages = [
    { include = "gen2aclbundle", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
pyfony-bundles = "^0.3.2"
azure-storage-file-datalake = "^12.0"
pandas = "0.25.*"
console-bundle = "^0.3.1"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
pyfony-core = "^0.7.1"
pytest = "^5.2"

[tool.poetry.plugins."pyfony.bundle"]
create = "gen2aclbundle.Gen2AclBundle:Gen2AclBundle"

[pyfony.bootstrap]
containerInit = "pyfonycore.container.containerInit:initWithCurrentBundle"
rootModuleName = "gen2aclbundle"
